--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 test/
-/platforms/__pycache__/firebase.cpython-39.pyc
+platforms/__pycache__/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
